# rustloops

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SESSION.md  pixi.toml
.agents/skills/rustloops/: SKILL.md  patterns.md
.agents/skills/rustloops-compare/: SKILL.md
.agents/skills/rustloops-revert/: SKILL.md
.agents/skills/rustloops/templates/: Cargo.toml  lib.rs  measure.py
examples/: README.md
examples/mandelbrot/: mandelbrot.py  measure.py
examples/nbody/: measure.py  nbody.py
examples/particle/: measure.py  particle.py
